finalizei o projeto Landing Page Ballerini

--- a/index.html
+++ b/index.html
@@ -14,35 +14,31 @@
         <nav>
             <a href="#">Comunidade Ballerini</a>
             <a href="#">Tutorial</a>
-            <a href="#">open Source</a>
+            <a href="#">Open Source</a>
             <a href="#">Comandos</a>
         </nav>
     </header>
     <main>
         <section class="primeiro">
-            <div>
+            <div class="parte1">
                 <h1>Balle Bot</h1>
                 <p>Deixe a sua comunidade segura de um jeito fácil</p>
-                <button>Me adicione</button>
+                <button>Me adicione!</button>
             </div>
 
-            <img src="imagens/Group 4.png" alt="Imagem Balle Bot">
+            <img class="imagem-principal" src="imagens/Group 4.png" alt="Imagem Balle Bot">
         </section>
 
        <section class="segundo">
             <h2>O que ela faz por você?</h2>
 
-            <ol type="1">
-               <li>Cria um sistema de verificação capcha para novos membros garantirem que não são robôs</li>
-               <li>Cria um sistema de verificação capcha para novos membros garantirem que não são robôs</li>
-               <li>Sistema de avisos e banimento manual, para pessoas administradoras utilizarem</li>
-            </ol>
+            <p>1 - Cria um sistema de verificação capcha para novos membros garantirem que não são robôs</p>
+            <p>2 - Cria um sistema de verificação capcha para novos membros garantirem que não são robôs</p>
+            <p>3 - Sistema de avisos e banimento manual, para pessoas administradoras utilizarem</p>
        </section>
     </main>
-    <footer>
-        <div>
-            <img src="imagens/BALLERINI.svg" alt="Ballerini">
-        </div>
+    <footer class="rodape">
+        <img class="imagem-rodape" src="imagens/BALLERINI.svg" alt="Ballerini">
     </footer>
 </body>
 </html>
