--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="cabeçalho">
         <img src="imagens/Vector.png" alt="Logotipo Ballerini">
 
-        <nav>
+        <nav class="menu">
             <a href="#">Comunidade Ballerini</a>
             <a href="#">Tutorial</a>
             <a href="#">Open Source</a>
